atualizando o arquivo index.html do modulo 2

--- a/modulo2/index.html
+++ b/modulo2/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Isso é um título</h1>
     <p>Isto é um paragráfo</p>
-    <img src="html.png" alt="HTML" /> 
+    <img src="/modulo2/html.png" alt="HTML" /> 
 </body>
 </html>
